tests/fixtures/guardrails/invalid/webhook-inline-business-logic/app/routes/webhooks.app.uninstalled.ts
import { revokeBillingAccess } from "~/domain/billing/revoke.server";

export async function action() {
  return revokeBillingAccess();
}
